# device_soc_goodix

./: BUILD.gn  OAT.xml  README.md
gr551x/: BUILD.gn  Kconfig.liteos_m.soc  NOTICE  gr551x_executable.gni
gr551x/adapter/hals/bluetooth/: hal_bt_evt_handler.c  hal_bt_evt_handler.h  hal_bt_gatt.c  hal_bt_gatt_server.c  hal_bt_ota.c
gr551x/adapter/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_i2c.c  hal_iot_pwm.c  hal_iot_uart.c  hal_iot_watchdog.c
gr551x/adapter/hals/update/: BUILD.gn  hal_hota_board.c
gr551x/adapter/hals/utils/file/: BUILD.gn
gr551x/adapter/hals/utils/file/src/: hal_file.c  posix_fs.c
gr551x/components/fs/: BUILD.gn  fs_init.c  littlefs.c  littlefs.h
gr551x/components/hilink/: hilink_demo.c
gr551x/components/hilink/include/: ble_cfg_net_api.h  hilink_bt_api.h  hilink_bt_function.h
gr551x/components/watchdog/: BUILD.gn  hi_watchdog.c  hi_watchdog.h
gr551x/drivers/: BUILD.gn  drivers.gni
gr551x/drivers/gpio/: BUILD.gn  gpio_gr55xx.c
gr551x/drivers/uart/: BUILD.gn  uart_gr55xx.c  uart_gr55xx.h
gr551x/hcs/: BUILD.gn
gr551x/hcs/device_info/: device_info.hcs
gr551x/hcs/gpio/: gpio_config.hcs
gr551x/sdk_liteos/: BUILD.gn  config.gni
gr551x/sdk_liteos/config/: BUILD.gn  custom_config.h  flash_scatter_config.h
gr551x/sdk_liteos/gr551x_sdk/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/app_drivers/inc/: app_adc.h  app_aes.h  app_dma.h  app_drv_config.h  app_drv_error.h  app_gpiote.h  app_hmac.h  app_i2c.h  app_io.h  app_pkc.h  app_pwm.h  app_pwr_mgmt.h  app_qspi.h  app_rng.h  app_rtc.h  app_rtos_cfg.h  app_soft_encoder.h  app_spi.h  app_spi_v2.h  app_systick.h  app_uart.h
gr551x/sdk_liteos/gr551x_sdk/components/app_drivers/src/: app_adc.c  app_aes.c  app_comp.c  app_dma.c  app_dual_tim.c  app_gpiote.c  app_hmac.c  app_i2c.c  app_i2s.c  app_io.c  app_pkc.c  app_pwm.c  app_pwr_mgmt.c  app_qspi.c  app_rng.c  app_rtc.c  app_rtos_cfg.c  app_soft_encoder.c  app_spi.c  app_spi_v2.c  app_systick.c  app_tim.c  app_uart.c
gr551x/sdk_liteos/gr551x_sdk/components/boards/: GR5515_SK.h  boards.h
gr551x/sdk_liteos/gr551x_sdk/components/drivers_ext/gr551x/: gr551x_spi_flash.c  gr551x_spi_flash.h
gr551x/sdk_liteos/gr551x_sdk/components/drivers_ext/st7735/: st7735.h  st7735_config.h
gr551x/sdk_liteos/gr551x_sdk/components/libraries/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_alarm/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_assert/: BUILD.gn  app_assert.c  app_assert.h
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_error/: BUILD.gn  app_error.c  app_error.h  app_error_cfg.h  cortex_backtrace.c  cortex_backtrace.h
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_key/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_lfs/: app_lfs.c  app_lfs.h  lfs.c  lfs_util.h
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_linked_list/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_log/: BUILD.gn  app_log.c  app_log.h  app_log_store.c  app_log_store.h
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_memory/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_queue/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_scheduler/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/profiles/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/sdk/: BUILD.gn  ble.h  ble_att.h  ble_error.h  ble_gapc.h  ble_gapm.h  ble_gatt.h  ble_gattc.h  ble_gatts.h  ble_l2cap.h  ble_prf.h  ble_sec.h  gr55xx_dfu.h  gr55xx_fpb.h  gr55xx_lcp.h  gr55xx_nvds.h  gr55xx_pwr.h  gr55xx_sys.h  gr55xx_sys_cfg.h  lcp_sdk.h  patch_tab.h  platform_sdk.h
gr551x/sdk_liteos/gr551x_sdk/drivers/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/drivers/inc/: app_drv.h  gr55xx_delay.h  gr55xx_hal.h  gr55xx_hal_adc.h  gr55xx_hal_aes.h  gr55xx_hal_aon_gpio.h  gr55xx_hal_aon_gpio_ex.h  gr55xx_hal_aon_wdt.h  gr55xx_hal_calendar.h  gr55xx_hal_cgc.h  gr55xx_hal_comp.h  gr55xx_hal_conf.h  gr55xx_hal_cortex.h  gr55xx_hal_def.h  gr55xx_hal_dma.h  gr55xx_hal_dual_tim.h  gr55xx_hal_efuse.h  gr55xx_hal_exflash.h  gr55xx_hal_gpio.h  gr55xx_hal_gpio_ex.h  gr55xx_hal_hmac.h  gr55xx_hal_i2c.h  gr55xx_hal_i2s.h  gr55xx_hal_iso7816.h  gr55xx_hal_msio.h  gr55xx_hal_msio_ex.h  gr55xx_hal_pkc.h  gr55xx_hal_pwm.h  gr55xx_hal_pwr.h  gr55xx_hal_qspi.h  gr55xx_hal_rng.h  gr55xx_hal_spi.h  gr55xx_hal_spi_v2.h  gr55xx_hal_tim.h  gr55xx_hal_uart.h  gr55xx_hal_wdt.h  gr55xx_hal_xqspi.h  gr55xx_ll_adc.h  gr55xx_ll_aes.h  gr55xx_ll_aon_gpio.h  (+23 more)
gr551x/sdk_liteos/gr551x_sdk/drivers/src/: app_iso7816.c  gr55xx_hal.c  gr55xx_hal_adc.c  gr55xx_hal_aes.c  gr55xx_hal_aon_gpio.c  gr55xx_hal_aon_wdt.c  gr55xx_hal_calendar.c  gr55xx_hal_comp.c  gr55xx_hal_dual_tim.c  gr55xx_hal_efuse.c  gr55xx_hal_exflash.c  gr55xx_hal_gpio.c  gr55xx_hal_hmac.c  gr55xx_hal_i2c.c  gr55xx_hal_i2s.c  gr55xx_hal_pkc.c  gr55xx_hal_pwm.c  gr55xx_hal_pwr.c  gr55xx_hal_qspi.c  gr55xx_hal_rng.c  gr55xx_hal_spi.c  gr55xx_hal_spi_v2.c  gr55xx_hal_tim.c  gr55xx_hal_uart.c  gr55xx_hal_wdt.c  gr55xx_hal_xqspi.c
gr551x/sdk_liteos/gr551x_sdk/platform/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/platform/boards/: board_SK.c
gr551x/sdk_liteos/gr551x_sdk/platform/include/: gr_plat.h  gr_soc.h  scatter_common.h
gr551x/sdk_liteos/liteos_m/: BUILD.gn  los_port_pm.c  los_port_pm.h  target_config.h
gr551x/sdk_liteos/platform/: BUILD.gn
gr551x/sdk_liteos/platform/include/: log_serial.h
gr551x/sdk_liteos/platform/linker/: gr5515.ld.tmpl
gr551x/sdk_liteos/platform/main/: BUILD.gn  main.c  main.h  sdk_main.c
gr551x/sdk_liteos/platform/startup/: BUILD.gn  gr551x.ld
gr551x/sdk_liteos/platform/system/: BUILD.gn  dprintf.c  log_serial.c  syscalls.c  sysmem.c  system.c  uart.c  uart.h
gr551x/sdk_liteos/platform/uart/: BUILD.gn  uart.c  uart.h
gr551x/sdk_liteos/third_party_adapter/mbedtls/: BUILD.gn
gr551x/sdk_liteos/third_party_adapter/mbedtls/config/: mbedtls_config_gr551x.h
gr551x/tools/: bin_create.py
(+225 files in other folders)
