# Copyright (c) 2024 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

action("resolve-link-script") {
  script = "//build/lite/run_shell_cmd.py"
  args = [
    "${compile_prefix}cpp${toolchain_cmd_suffix}",
    "-include",
    rebase_path("sdk_liteos/config/custom_config.h"),
    "-E",
    rebase_path("sdk_liteos/platform/linker/gr5515.ld.tmpl"),
    "-o",
    rebase_path("$root_build_dir/bin/link.ld"),
    "-P",
  ]
  outputs = [ "$root_build_dir/bin/link.ld" ]
}

copy("sdk_lib") {
  sources = [ "sdk_liteos/gr551x_sdk/platform/soc/linker/gcc/libble_sdk.a" ]
  outputs = [ "$root_build_dir/libs/libble_sdk.a" ]
}

copy("rom_symbol") {
  sources =
      [ "sdk_liteos/gr551x_sdk/platform/soc/linker/gcc/rom_symbol_gcc.txt" ]
  outputs = [ "$root_build_dir/libs/rom_symbol_gcc.txt" ]
}

module_group("gr551x") {
  deps = [
    ":resolve-link-script",
    ":rom_symbol",
    ":sdk_lib",
  ]

  modules = [
    "sdk_liteos",
    "components",
  ]
}
