# Copyright (c) 2021 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("drivers.gni")


group("drivers") {

  public_deps = []

  if (hdf_drivers_gpio_enable) {
    public_deps += [ "gpio:gpio" ]
  }

  if (hdf_drivers_uart_enable) {
    public_deps += [ "uart:uart" ]
  }
}


