# Copyright (c) 2021 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

declare_args() {
  hdf_drivers_gpio_enable = true
  hdf_drivers_uart_enable = true
}

hdf_include_dirs = [
    "//drivers/adapter/khdf/liteos_m/osal/include/",
    "//drivers/adapter/khdf/liteos/platform/include/",
    "//drivers/framework/ability/sbuf/include",
    "//drivers/framework/include",
    "//drivers/framework/include/osal",
    "//drivers/framework/include/config",
    "//drivers/framework/include/core",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/utils",
    "//drivers/framework/core/host/include",
    "//drivers/framework/core/shared/include",
    "//drivers/framework/core/common/include/host",
    "//drivers/framework/utils/include",
    "//drivers/framework/include/platform",
    "//drivers/framework/support/platform/include",
    "//drivers/framework/support/platform/include/common",
]
