# Copyright (c) 2024 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

module_group("libraries") {
  modules = [
    "at_cmd",
    "fcc",
    "utility",
    "app_memory",
    "dfu_master",

    # "virt_key",
    "app_linked_list",
    "hci_uart",
    "app_alarm",
    "ble/ble_time",

    # "ble/ble_gatt_service",
    # "ble/ble_connect",
    # "ble/ble_scanner",
    # "ble/ble_advertising",
    "crypto_lib",
    "pmu_calibration",
    "app_timer",
    "sensorsim",
    "app_log",
    "user_efuse",
    "app_scheduler",
    "app_error",
    "app_key",
    "hal_flash",
    "app_queue",
    "dfu_port",
    "fault_trace",
    "app_assert",
    "CMSIS/cmsis_dsp",
    "ring_buffer",
  ]
}
