# Copyright (c) 2024 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

config("public") {
  include_dirs = [ "inc" ]
}

kernel_module("crypto_lib") {
  sources = [
    "src/crypto_aes.c",
    "src/crypto_ecc.c",
    "src/crypto_ecc_port.c",
    "src/crypto_gcm.c",
    "src/crypto_pkc.c",
    "src/crypto_pkc_port.c",
    "src/crypto_rsa.c",
    "src/crypto_rsa_port.c",
    "src/crypto_sha256.c",
  ]
}
